--- a/package.json
+++ b/package.json
@@ -30,10 +30,8 @@
     "react-native-crypto": "^2.1.0",
     "react-native-dotenv": "^3.4.9",
     "react-native-level-fs": "^3.0.0",
-    "react-native-os": "^1.0.1",
     "react-native-randombytes": "^3.0.0",
-    "react-native-tcp": "^3.2.1",
-    "react-native-udp": "^2.1.0",
+    "react-native-vector-icons": "^9.2.0",
     "readable-stream": "1.0.33",
     "stream-browserify": "^1.0.0",
     "string_decoder": "~0.10.25",
@@ -53,6 +51,7 @@
     "@tsconfig/react-native": "3.0.0",
     "@types/metro-config": "0.76.3",
     "@types/react": "18.0.24",
+    "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-test-renderer": "18.0.0",
     "babel-jest": "29.2.1",
     "eslint": "8.19.0",
