--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/picker": "^1.8.1",
     "@tanstack/react-query": "^4.29.19",
     "@tradle/react-native-http": "^2.0.0",
     "assert": "^1.1.1",
@@ -20,6 +21,7 @@
     "dns.js": "^1.0.1",
     "domain-browser": "^1.1.1",
     "events": "^1.0.0",
+    "formik": "^2.4.2",
     "https-browserify": "~0.0.0",
     "path-browserify": "0.0.0",
     "process": "^0.11.0",
@@ -28,8 +30,11 @@
     "react": "18.2.0",
     "react-native": "0.72.1",
     "react-native-crypto": "^2.1.0",
+    "react-native-date-picker": "^4.2.13",
     "react-native-dotenv": "^3.4.9",
     "react-native-level-fs": "^3.0.0",
+    "react-native-mask-text": "^0.14.2",
+    "react-native-picker-select": "^8.0.4",
     "react-native-randombytes": "^3.0.0",
     "react-native-vector-icons": "^9.2.0",
     "readable-stream": "1.0.33",
