--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "events": "^1.0.0",
     "formik": "^2.4.2",
     "https-browserify": "~0.0.0",
+    "moment": "^2.29.4",
     "path-browserify": "0.0.0",
     "process": "^0.11.0",
     "punycode": "^1.2.4",
