feat: Created the splash screen before app open

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native-mask-text": "^0.14.2",
     "react-native-picker-select": "^8.0.4",
     "react-native-randombytes": "^3.0.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^9.2.0",
     "readable-stream": "1.0.33",
     "stream-browserify": "^1.0.0",
