feat: created the scripts to find movement by period

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -88,6 +88,12 @@ android {
             keyAlias 'androiddebugkey'
             keyPassword 'android'
         }
+        // release {
+        //     storeFile file('lucas_magu.keystore')
+        //     storePassword 'M@riad88'
+        //     keyAlias 'lucas_magu'
+        //     keyPassword 'M@riad88'
+        // }
     }
     buildTypes {
         debug {
@@ -97,6 +103,7 @@ android {
             // Caution! In production, you need to generate your own keystore file.
             // see https://reactnative.dev/docs/signed-apk-android.
             signingConfig signingConfigs.debug
+            // signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
