--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^4.29.19",
     "@tradle/react-native-http": "^2.0.0",
     "assert": "^1.1.1",
+    "axios": "^1.4.0",
     "browserify-zlib": "~0.1.4",
     "buffer": "^4.9.1",
     "console-browserify": "^1.1.0",
